<resources>
    <string name="app_name">MiniTwitter</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_loggin">ENTRAR</string>
    <string name="text_create_account">Si aún no tienes cuenta, resgistrate aquí.</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="text_go_loggin">Si ya dispone de una cuenta inicie sesión aquí.</string>
    <string name="btn_SignUp">Registrar</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_prueba">PruebaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="toolBar_tittle_hom">Inicio</string>
    <string name="todo">TODO</string>
    <string name="hint_mensaje_nuevo_tweet">¿Que esta pasando?</string>
    <string name="buttom_twittear">Twittear</string>
    <string name="buttom_save">GUARDAR</string>
    <string name="bottom_mod_pass">MODIFICAR CONTRASEÑA</string>
    <string name="website">Website</string>
    <string name="description_user">Descrición e interes</string>
</resources>