<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_baseline_close__black_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <Button
        android:id="@+id/buttonTwittear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_nuevo_tweet_buttom"
        android:text="@string/buttom_twittear"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewClose" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewUser"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_account_circle_bluefinal24"
        app:layout_constraintStart_toStartOf="@+id/imageViewClose"
        app:layout_constraintTop_toBottomOf="@+id/imageViewClose" />

    <EditText
        android:id="@+id/editTextTextTweet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_mensaje_nuevo_tweet"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonTwittear"
        app:layout_constraintStart_toEndOf="@+id/imageViewUser"
        app:layout_constraintTop_toTopOf="@+id/imageViewUser" />
</androidx.constraintlayout.widget.ConstraintLayout>